<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_nombre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:onClick="oyente_btn_entrar"
        android:text="@string/btn_entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Escriba su nombre"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblIm_logo"
        app:layout_constraintVertical_bias="0.487"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/lblIm_logo"
        android:layout_width="181dp"
        android:layout_height="176dp"
        android:contentDescription="@string/lblIm_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bienvenido"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/android" />

    <TextView
        android:id="@+id/lbl_bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lbl_bienvenido"
        android:textColor="#009688"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

</androidx.constraintlayout.widget.ConstraintLayout>